@@ -33,5 +33,8 @@ and personalized encoding.
 I'm thinking something from the random module might do the trick.)
 * Made encode and decode tell the user to create a key before launching.
 (Might have them launch Create New Key at a future date.)
+* Added randrange to ensure that data stored 
+with the key is never created the same way twice.
+
 
 END CHANGE LOG
